--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,10 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=4EBFC4E14D5E1072A007E4B5448F0FA0
+ProjectName=ScanEmAll!
+Description=Scan all the Creatures
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
